# YSCV

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  context.md
.cargo/: config.toml
.github/workflows/: ci.yml
apps/bench/: Cargo.toml
apps/bench/src/: main.rs
apps/camera-face-tool/: Cargo.toml
apps/camera-face-tool/benches/: camera_face_runtime_ops.rs
apps/camera-face-tool/src/: config.rs  diagnostics.rs  error.rs  event_log.rs  main.rs  pipeline.rs  util.rs
benchmarks/: check-criterion-baseline.sh  check-trend-baseline-freshness.sh  ci-baseline-autograd-micro.txt  ci-baseline-camera-face-tool-micro.txt  ci-baseline-cli-micro.txt  ci-baseline-detect-micro.txt  ci-baseline-eval-micro.txt  ci-baseline-face.txt  ci-baseline-imgproc-micro.txt  ci-baseline-kernels-micro.txt  ci-baseline-model-micro.txt  ci-baseline-people.txt  ci-baseline-recognize-micro.txt  ci-baseline-tensor-micro.txt  ci-baseline-track-micro.txt  ci-baseline-video-micro.txt  ci-baseline.txt  compare-trend-snapshots.sh  compare_competitors.py  diagnostics-sample-ok.json  eval-detection-coco-gt-sample.json  eval-detection-coco-pred-sample.json  eval-detection-kitti-manifest-invalid.txt  eval-detection-kitti-manifest-sample.txt  eval-detection-openimages-gt-sample.csv  eval-detection-openimages-pred-sample.csv  eval-detection-sample.jsonl  eval-detection-voc-manifest-sample.txt  eval-detection-widerface-gt-sample.txt  eval-detection-widerface-pred-sample.txt  eval-detection-yolo-manifest-invalid.txt  eval-detection-yolo-manifest-sample.txt  eval-tracking-mot-gt-sample.txt  eval-tracking-mot-pred-sample.txt  eval-tracking-sample.jsonl  export-criterion-trend.sh  export-runtime-trend.sh  run-criterion-gate.sh  trend-baseline-micro.tsv  trend-baseline-runtime.tsv
benchmarks/eval-detection-kitti-gt/: frame0.txt  frame1.txt  frame2.txt
benchmarks/eval-detection-kitti-gt-invalid/: frame_bad.txt
benchmarks/eval-detection-kitti-pred/: frame0.txt  frame1.txt  frame2.txt
benchmarks/eval-detection-voc-gt/: frame0.xml  frame1.xml  frame2.xml
benchmarks/eval-detection-voc-gt-invalid/: frame_bad.xml
benchmarks/eval-detection-voc-pred/: frame0.xml  frame1.xml  frame2.xml
benchmarks/eval-detection-yolo-gt/: frame1.txt  frame2.txt
benchmarks/eval-detection-yolo-pred/: frame0.txt  frame1.txt  frame2.txt
benchmarks/python/: bench_kernels.py  bench_numpy.py  bench_onnxruntime.py  bench_opencv.py  bench_pytorch.py  bench_tensor.py  bench_yolo_onnxruntime.py
benchmarks/rust-competitors/: Cargo.toml
benchmarks/rust-competitors/src/: main.rs
crates/yscv/: Cargo.toml
crates/yscv-autograd/: Cargo.toml
crates/yscv-autograd/benches/: autograd_graph_ops.rs
crates/yscv-autograd/src/: checkpoint.rs  core.rs  error.rs  graph.rs  lib.rs  node.rs
crates/yscv-cli/: Cargo.toml
crates/yscv-cli/src/: config.rs  (+10 more)
crates/yscv-detect/: Cargo.toml
crates/yscv-eval/: Cargo.toml
crates/yscv-imgproc/: Cargo.toml
crates/yscv-kernels/: Cargo.toml  build.rs
crates/yscv-model/: Cargo.toml
crates/yscv-onnx/: Cargo.toml  build.rs
crates/yscv-onnx/src/: dtype.rs  error.rs  exporter.rs  lib.rs  loader.rs  optimizer.rs  proto.rs
crates/yscv-onnx/src/runner/: compare.rs  conv.rs  elementwise.rs  gather_scatter.rs  gpu.rs  linear.rs  misc.rs  mod.rs  normalization.rs  pooling.rs  reduce.rs  reshape.rs
crates/yscv-onnx/src/runner/metal/: compile.rs  dispatch.rs  graph.rs  mod.rs  record.rs  run.rs  types.rs
crates/yscv-onnx/src/tests/: conv_pool.rs  dynamic_shapes.rs  elementwise.rs  exporter.rs  gather_scatter.rs  gemm_matmul.rs  integration.rs  loader.rs  mod.rs  normalization.rs  optimizer.rs  reshape.rs
crates/yscv-optim/: Cargo.toml
crates/yscv-recognize/: Cargo.toml
crates/yscv-tensor/: Cargo.toml  build.rs
crates/yscv-track/: Cargo.toml
crates/yscv-video/: Cargo.toml
crates/yscv/src/: lib.rs
docs/: README.md  api-stability.md  architecture.md  cookbook.md  dataset-adapters.md  ecosystem-capability-matrix.md  native-camera-validation.md  onnx-inference.md  performance-benchmarks.md  training-augmentation.md  training-optimizers.md
examples/: Cargo.toml
examples/src/: bench_gpu.rs  bench_metal_conv.rs  bench_metal_vball.rs  bench_metal_yolo.rs  bench_mps_gemm.rs  bench_mpsgraph.rs  bench_vball_cpu.rs  bench_video_decode.rs  bench_yolo.rs  classify_image.rs  debug_metal_yolo.rs  detect_objects.rs  image_pipeline.rs  image_processing.rs  lib.rs  train_cnn.rs  train_linear.rs  vball_grid_infer.rs  vball_grid_probe.rs  yolo_detect.rs  yolo_finetune.rs  yolo_vis.rs
scripts/: bench-all-competitors.sh  bump-version.sh  publish.sh
(+413 files in other folders)
